--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # testing
 /coverage
+/SCREENSHOTS
 
 # next.js
 /.next/
@@ -26,7 +27,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-#.env*.local
+.env*.local
 
 # vercel
 .vercel
